--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=4000
 HOST=localhost
-DB_URL=mongodb://127.0.0.1:27017/chatapp
+DB_URL=mongodb://admin:ki9466pVoALousEu@SG-snow-chair-52-57462.servers.mongodirector.com:27017/admin
