--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-PORT=4000
+PORT=80
+SOCKET_PORT=443
 HOST=localhost
 DB_URL=mongodb://admin:ki9466pVoALousEu@SG-snow-chair-52-57462.servers.mongodirector.com:27017/admin
