--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This Rest API for MY Angular2 Projects.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server"
   },
   "keywords": [
     "rest",
