--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
     "mongoose": "^7.0.2",
-    "socket.io": "^4.6.1"
+    "socket.io": "2.2.0"
   }
 }
