server is ready

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ PORT=4000
 SOCKET_PORT=443
 HOST=localhost
 DB_URL=mongodb://admin:ki9466pVoALousEu@SG-snow-chair-52-57462.servers.mongodirector.com:27017/chatAudit
+DB_URL_DEV=mongodb://admin:ki9466pVoALousEu@SG-snow-chair-52-57462.servers.mongodirector.com:27017/chatAuditDev
+MODE=development
