--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=4000
 SOCKET_PORT=443
 HOST=localhost
-DB_URL=mongodb://admin:ki9466pVoALousEu@SG-snow-chair-52-57462.servers.mongodirector.com:27017/chatAudit
-DB_URL_DEV=mongodb://admin:ki9466pVoALousEu@SG-snow-chair-52-57462.servers.mongodirector.com:27017/chatAuditDev
+DB_URL=mongodb://admin:Gp0C8aRyVlVq6uW2@SG-tough-banana-2494-57923.servers.mongodirector.com:27017/admin
+DB_URL_DEV=mongodb://admin:Gp0C8aRyVlVq6uW2@SG-tough-banana-2494-57923.servers.mongodirector.com:27017/admin
 MODE=development
