--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=4000
 SOCKET_PORT=443
 HOST=localhost
-DB_URL=mongodb://admin:Gp0C8aRyVlVq6uW2@SG-tough-banana-2494-57923.servers.mongodirector.com:27017/admin
-DB_URL_DEV=mongodb://admin:Gp0C8aRyVlVq6uW2@SG-tough-banana-2494-57923.servers.mongodirector.com:27017/admin
+DB_URL=mongodb://admin:lbs1KlPrn1V7so5F@SG-sable-cirrus-296-58192.servers.mongodirector.com:27017/admin
+DB_URL_DEV=mongodb://admin:lbs1KlPrn1V7so5F@SG-sable-cirrus-296-58192.servers.mongodirector.com:27017/admin
 MODE=development
